update with footer for angular and JS options

--- a/ngCaffeineCount/src/app/app.component.html
+++ b/ngCaffeineCount/src/app/app.component.html
@@ -1,3 +1,9 @@
 <main class="container-fluid">
   <app-home></app-home>
 </main>
+
+
+<footer>
+  <hr>
+  <a href="indexStatic.html">View static HTML/JS version</a>
+</footer>
