--- a/ngCaffeineCount/src/app/components/home/home.component.html
+++ b/ngCaffeineCount/src/app/components/home/home.component.html
@@ -56,11 +56,11 @@
 				</div>
 				<div class="form-group" >
 					<label for="size">Size: </label>
-					<input class="form-control" type="number" min="0" max="1000" name="size" placeholder="ounces" [(ngModel)]="newDrink.size">
+					<input class="form-control" type="number" min="0" max="1000" name="size" placeholder="ounces" required [(ngModel)]="newDrink.size">
 				</div>
 				<div class="form-group" >
 					<label for="caffeine">Caffeine: </label>
-					<input class="form-control"  type="number" min="0" max="2000" name="caffeine" placeholder="milligrams" [(ngModel)]="newDrink.caffeine">
+					<input class="form-control"  type="number" min="0" max="2000" name="caffeine" placeholder="milligrams" required [(ngModel)]="newDrink.caffeine">
 				</div>
 				<div class="form-group" >
 					<label for="imageUrl">Picture URL: </label>
